weather: forecast generator interpolates between forecasts